[package]
name = "kappa_coder"
version = "0.1.0"
edition = "2024"

[dependencies]
coder = { path = "src/coder" }
data_model = { path = "../../KappaLibrary/data_model" }
processor_engine = { path = "../../KappaLibrary/processor_engine" }
interfaces = { path = "../../KappaLibrary/interfaces" }
libloading = "0.9.0"
