[package]
name = "kappa_coder"
version = "0.1.0"
edition = "2024"

[dependencies]
coder = { path = "src/coder" }
data_model = { version = "0.2.0", path = "../../KappaLibrary/data_model" }
processor_engine = { version = "0.2.0", path = "../../KappaLibrary/processor_engine" }
interfaces = { path = "../../KappaLibrary/interfaces" }
libloading = "0.9.0"
stream_proc_macro = { version = "0.1.0", path = "../../KappaLibrary/processor_engine/src/stream_proc_macro" }
utils = { version = "0.1.0", path = "../../KappaLibrary/utils" }
