[package]
name = "kappa_coder"
version = "0.1.0"
edition = "2024"

[dependencies]
coder = { path = "src/coder" }
data_model = { version = "0.2.0", path = "../kappa_lib/data_model" }
processor_engine = { version = "0.2.0", path = "../kappa_lib/processor_engine" }
interfaces = { path = "../kappa_lib/interfaces" }
stream_proc_macro = { version = "0.1.0", path = "../kappa_lib/processor_engine/src/stream_proc_macro" }
utils = { version = "0.1.0", path = "../kappa_lib/utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.9.0"

